--- a/views/friends.erb
+++ b/views/friends.erb
@@ -8,9 +8,9 @@
 
   <body>
     <h1>My Super Cool Friends List</h1>
-
-    <h2><% @friends.each do |friend| %>
-    <% end %></h2>
+    <% @friends.each do 
+      |friend| %>
+    <h2><%= friend %></h2>
 
   </body>
 </html>
